<resources>
    <string name="app_name">StartxPlanify</string>
    <string name="Day_Night">🌞 /🌙 Day/Night</string>
    <string name="welcome">Welcome to StartxPlanify </string>
    <string name="powerd">Powerd By Amir</string>
    <string name="infoText">"Manage your tasks easily with StartixPlanify!"</string>
    <string name="infoText2">Plan, track, and achieve your goals with ease!"</string>
    <string name="infoText11">"Manage your tasks easily with StartixPlanify!"</string>
    <string name="infoText22">Plan, track, and achieve your goals with ease!"</string>
    <string name="start">Get Start</string>
    <string name="login">Hi, "\n"Please Login</string>
    <string name="email">Email</string>
    <string name="EnterEmail">Enter Your Email</string>
    <string name="pass">Password</string>
    <string name="Enterpass">Password</string>
    <string name="dont_have_account">Don\'t have an account? Click here</string>
    <string name="forgotPass">Forgot Password ?</string>
    <string name="Google_Api_key">AIzaSyC0WM5v4QRV70_6HaW86hN1kwLLf2XtBhw</string>


    <string name="login_button">Log-in</string>
    <string name="signup_button">Sign-up</string>

    <string name="createAccount">Create Account</string>
    <string name="name">Name</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="EnterName">Enter Your Name</string>
    <string name="open_drawer">Ouvrir le menu</string>
    <string name="close_drawer">Fermer le menu</string>



    <string name="no_tasks_found">No tasks found.</string>
    <string name="error_loading_tasks">Error loading tasks</string>
    <string name="add_private_task">Add Private Task</string>
    <string name="modify_task">Modify Task</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="task_added">Task Added</string>
    <string name="error_saving_task">Error saving task</string>
    <string name="invalid_date_format">Invalid date format. Use dd/MM/yyyy HH:mm</string>
    <string name="please_enter_title">Please enter a Title</string>
    <string name="please_select_end_date">Please select an End Date and Time</string>
    <string name="deadline_format">Deadline: %s</string>
    <string name="error_updating_task">Error updating task</string>
    <string name="task_updated">Task Updated</string>
    <string name="confirm_task_deletion">Confirm Task Deletion</string>
    <string name="delete_task_confirmation">Are you sure you want to delete the task: \'%s\'? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="error_deleting_task">Error deleting task</string>







</resources>