<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText"
    tools:layout_editor_absoluteX="-7dp"
    tools:layout_editor_absoluteY="-137dp">


    <EditText
        android:id="@+id/editTextEmil2"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:autofillHints="zdz"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/EnterName"
        android:inputType="text"
        android:padding="12sp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="142dp"
        android:layout_height="46dp"
        android:layout_marginTop="164dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/background_button_intro"
        android:text="@string/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="zdz"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/Enterpass"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        tools:ignore="MissingConstraints,TextFields" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="216dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/top_background"
        tools:layout_editor_absoluteY="1dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="zdz"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/Enterpass"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/editTextEmil"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="zdz"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/Enterpass"
        android:inputType="text"
        android:padding="12sp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextEmil3"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="zdz"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/EnterEmail"
        android:inputType="text"
        android:padding="12sp"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmil3"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="UnknownId,UnknownIdInLayout" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_pass"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmil"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmil2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
